--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
     },
     "dependencies": {
         "@farcaster/auth-kit": "^0.1.4",
+        "@neynar/nodejs-sdk": "^2.13.1",
         "@radix-ui/react-slot": "^1.1.0",
+        "@types/mongodb": "^4.0.6",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "ethers": "^5.7.2",
         "lucide-react": "^0.438.0",
+        "mongodb": "^6.13.0",
+        "mongoose": "^8.10.1",
         "next": "14.1.0",
+        "node-cache": "^5.1.2",
         "react": "^18",
         "react-dom": "^18",
         "tailwind-merge": "^2.5.2",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@types/node": "^20",
