--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "@onlook/next-template",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -11,17 +12,21 @@
     },
     "dependencies": {
         "@farcaster/auth-kit": "^0.1.4",
+        "@headlessui/react": "^2.2.0",
+        "@heroicons/react": "^2.2.0",
         "@neynar/nodejs-sdk": "^2.13.1",
         "@radix-ui/react-slot": "^1.1.0",
         "@types/mongodb": "^4.0.6",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "dotenv": "^16.4.7",
         "ethers": "^5.7.2",
         "lucide-react": "^0.438.0",
         "mongodb": "^6.13.0",
         "mongoose": "^8.10.1",
         "next": "14.1.0",
         "node-cache": "^5.1.2",
+        "node-fetch": "^2.7.0",
         "react": "^18",
         "react-dom": "^18",
         "tailwind-merge": "^2.5.2",
