--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@neynar/nodejs-sdk": "^2.13.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/mongodb": "^4.0.6",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -41,15 +44,12 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "^15.1.6",
-    "prettier": "^3.3.3",
-    "typescript": "^5"
+    "prettier": "^3.3.3"
   }
 }
