--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,19 @@
-# Neynar API Key (get from https://neynar.com)
+# Neynar API Configuration
 NEYNAR_API_KEY=
+NEYNAR_CHANNEL_ID=someone-build
+
+# MongoDB Configuration
+MONGODB_URI=mongodb+srv://your_username:your_password@your_cluster.mongodb.net/your_database?retryWrites=true&w=majority
+
+# Next-Auth Configuration
+NEXTAUTH_URL=http://localhost:3001
+NEXTAUTH_SECRET=your_nextauth_secret
+
+# Server Configuration
+PORT=3001
 
 # Farcaster Auth Configuration
 NEXT_PUBLIC_RELAY_URL=https://relay.farcaster.xyz
 NEXT_PUBLIC_RPC_URL=https://mainnet.optimism.io
-NEXT_PUBLIC_DOMAIN=localhost:3000
-NEXT_PUBLIC_SIWE_URI=http://localhost:3000/login 
+NEXT_PUBLIC_DOMAIN=localhost:3001
+NEXT_PUBLIC_SIWE_URI=http://localhost:3001/login 
