--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "^20.0.0"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "node scripts/get-commit-hash.js && next dev",
+    "build": "node scripts/get-commit-hash.js && next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
